# proteinmask

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: designs.fasta
examples/: quickstart.py
proteinmask/: __init__.py  benchmark.py  design.py  family.py
tests/: test_proteinmask.py
