[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proteinmask"
version = "0.1.0"
description = "A toy masked protein-sequence infilling benchmark with motif recovery metrics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["protein-language-model", "masked-modeling", "bio-ai", "sequence-design", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/proteinmask"

[tool.hatch.build.targets.wheel]
packages = ["proteinmask"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]
